--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>[Martyna] [Rychlik] - Recruitment task</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
 </head>
-<body>
-    <div class="main-container">
-      <img src="sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_784.jpg" alt="">
-      <div class="article-container">
-        <h1> Lorem ipsum</h1>
-        <p>Ipsam quidem magnam dolorum illo vitae! Omnis sapiente sequi itaque quis, consectetur 
-            dolor. Consequatur iusto, provident exercitationem animi ametdolorum illo vitae.</p>
-            <button class="button">Button</button>
+<body >
+    
+    <div class="main-module">
+        <img src="sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_784.jpg" alt="sunset at the seaside">
+        <div class="article-container">
+            <h1> Lorem ipsum</h1>
+            <p>Ipsam quidem magnam dolorum illo vitae. Omnis sapiente sequi itaque quis, consectetur 
+            dolor. Consequatur iusto, provident.dolorum illo vitanis sapiente sequi, ipsam quidem magnam</p>
+            <button id="main-button" class="main-button" onclick="openPopup()">Button</button>
+            
         </div>
     </div>
+
+    <div class="popup" id="popup">
+        <h2>Alert!</h2>
+        <p class="alert-info"> You have clicked to related button</p>
+        <i class="fa-solid fa-xmark close-button "class="close-button" onclick="closePopup()"></i>
+    </div>
+
+    <script src="js/main.js"></script>
 </body>
